Center logo in sidebar, fix code syntax highlighting contrast

--- a/docs/_sass/color_schemes/dark.scss
+++ b/docs/_sass/color_schemes/dark.scss
@@ -7,8 +7,7 @@ $nav-child-link-color: #a1a1aa;
 $search-background-color: #27272a;
 $search-result-preview-color: #a1a1aa;
 $border-color: #3f3f46;
-$code-background-color: #27272a;
+$code-background-color: #1a1a2e;
 $feedback-color: #a1a1aa;
 $table-background-color: #27272a;
-$search-background-color: #27272a;
 $btn-primary-color: #60a5fa;
